fix(intro.css): fix event headers not centered due to `min-height`
* section.timeline div.Timeline dl dd .events .events-header

--- a/css/intro.css
+++ b/css/intro.css
@@ -127,8 +127,7 @@ section.timeline div.Timeline dl dd .events .events-object {
 
 section.timeline div.Timeline dl dd .events .events-header {
   margin: 0 10px 10px 10px;
-  min-height: 30px;
-  line-height: 20px;
+  line-height: 30px;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
